popup-body-css-fix (#256)
* popup-body-css-fix

* Update style.css

flex - will "delete" second scrollbar

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -225,6 +225,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: var(--bg-color);
+    display: inline-flex;
 }
 
 #login {
